1st commit from new laptop fixed spacing and colors and put syllibi in

--- a/includes/styles.css
+++ b/includes/styles.css
@@ -106,7 +106,7 @@ footer {
     border-radius: 5px;
     padding-bottom: 10px;
     padding-top: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 50px;
     background-color: #2736a4;
     box-shadow: 5px 5px black;
   }
@@ -323,6 +323,10 @@ pre {
     border-style: solid;
     border-width: 5px;
     border-radius: 5px; 
+}
+
+#footer {
+  height: 2vh;
 }
 
 /* For Tablet View */
